--- a/docollabbackend/package.json
+++ b/docollabbackend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc_collebrator_backend",
+  "name": "docollabbackend",
   "version": "1.0.0",
   "description": "",
   "main": "App.js",
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.10.0",
-    "mongodb": "^6.6.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.1",
+    "uuid": "^9.0.1"
   }
 }
